# fetch-mc

./: Cargo.toml  LICENSE  README.md  config.toml.example  mc_config.toml
example/: mine.toml  mods.toml
src/: api.rs  config.rs  main.rs
