[package]
name = "fetch-mc"
version = "0.1.0"
edition = "2024"
description = "Fetch-MC is a terminal-based Minecraft Mod management utility for updating mods, resource packs, and shaders from Modrinth. Fetch-MC downloads the latest compatible version of mods based on a specified Minecraft version."
documentation = "https://github.com/nick-Sutton/fetch-mc"
repository = "https://github.com/nick-Sutton/fetch-mc"
license = "MIT"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.26", features = ["json"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
